# serializer version: 1
# name: TestEvaluationCampaignManager.test_close_accepted_but_not_reviewed[accepted email body]
  '''
  Bonjour,
  
  La DDETS 01 a validé la conformité des nouveaux justificatifs que vous avez transmis dans le cadre du contrôle a posteriori sur les embauches réalisées en auto-prescription entre le 01 Janvier 2022 et le 30 Septembre 2022.
  
  Cette campagne de contrôle est terminée pour votre SIAE EI Les petits jardins ID-2000.
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_close_no_response[no docs email body]
  '''
  Bonjour,
  
  Sauf erreur de notre part, vous n’avez pas transmis les justificatifs demandés dans le cadre du contrôle a posteriori sur vos embauches réalisées en auto-prescription entre le 01 Janvier 2022 et le 30 Septembre 2022.
  
  La DDETS 01 ne peut donc pas faire de contrôle, par conséquent votre résultat concernant cette procédure est négatif (vous serez alerté des sanctions éventuelles concernant votre SIAE prochainement) conformément à l’instruction N° DGEFP/SDPAE/MIP/2022/83 du 5 avril 2022 relative à la mise en œuvre opérationnelle du contrôle a posteriori des recrutements en auto-prescription prévu par les articles R. 5132-1-12 à R. 5132-1-17 du code du travail.
  
  Pour plus d’informations, vous pouvez vous rapprocher de la DDETS 01.
  
  Si vous avez déjà pris contact avec votre DDETS, merci de ne pas tenir compte de ce courriel.
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_close_no_response[sanction notification email body]
  '''
  Bonjour,
  
  Suite au dernier contrôle a posteriori, une ou plusieurs SIAE de votre département ont obtenu un résultat négatif.
  Conformément au  Décret n° 2021-1128 du 30 août 2021 relatif à l'insertion par l'activité économique, les manquements constatés ainsi que les sanctions envisagées doivent être notifiés aux SIAE.
  
  Veuillez vous connecter sur votre espace des emplois de l’inclusion afin d’effectuer cette démarche.
  http://localhost:8000/siae_evaluation/institution_evaluated_siae_list/1000/
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_close_refused_but_not_reviewed[refused email body]
  '''
  Bonjour,
  
  Vous trouverez ci-après le résultat du contrôle a posteriori sur vos auto-prescriptions réalisées entre le 01 Janvier 2022 et le 30 Septembre 2022.
  
  La DDETS 01 a vérifié les nouveaux justificatifs transmis par votre structure EI Les petits jardins ID-2000 dans le cadre de la phase contradictoire du contrôle a posteriori sur vos embauches réalisées en auto-prescription entre le 01 Janvier 2022 et le 30 Septembre 2022.
  
  Un ou plusieurs de vos justificatifs n’ont pas été validés par conséquent votre résultat concernant cette procédure est négatif (vous serez alerté des sanctions éventuelles concernant votre SIAE prochainement) conformément à l’instruction N° DGEFP/SDPAE/MIP/2022/83 du 5 avril 2022 relative à la mise en œuvre opérationnelle du contrôle a posteriori des recrutements en auto-prescription prévu par les articles R. 5132-1-12 à R. 5132-1-17 du code du travail.
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_close_refused_but_not_reviewed[sanction notification email body]
  '''
  Bonjour,
  
  Suite au dernier contrôle a posteriori, une ou plusieurs SIAE de votre département ont obtenu un résultat négatif.
  Conformément au  Décret n° 2021-1128 du 30 août 2021 relatif à l'insertion par l'activité économique, les manquements constatés ainsi que les sanctions envisagées doivent être notifiés aux SIAE.
  
  Veuillez vous connecter sur votre espace des emplois de l’inclusion afin d’effectuer cette démarche.
  http://localhost:8000/siae_evaluation/institution_evaluated_siae_list/1000/
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_transition_to_adversarial_phase[accepted review email body]
  '''
  Bonjour,
  
  La DDETS 1 a validé la conformité des justificatifs que vous avez transmis dans le cadre du contrôle a posteriori sur les embauches réalisées en auto-prescription entre le 02 Octobre 2022 et le 02 Décembre 2022.
  
  Cette campagne de contrôle est terminée pour votre SIAE EI Geo accepted ID-2004.
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_transition_to_adversarial_phase[force accepted email body]
  '''
  Bonjour,
  
  La campagne de contrôle a posteriori sur les embauches réalisées en auto-prescription entre le 02 Octobre 2022 et le 02 Décembre 2022 entre en phase contradictoire.
  
  La DDETS 1 n’a pas étudié la conformité des justificatifs que vous avez transmis dans le délai imparti. Par conséquent, vos auto-prescriptions sont considérées comme conformes.
  
  Cette campagne de contrôle est terminée pour votre SIAE EI Prim’vert ID-2003.
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_transition_to_adversarial_phase[institution summary email body]
  '''
  Bonjour,
  
  Vous trouverez ci-dessous la liste des SIAE qui n’ont transmis aucun justificatif dans le cadre du contrôle a posteriori :
  
  - EI Les grands jardins ID-2001
  
  - EI Les petits jardins ID-2002
  
  Ces structures n’ayant pas transmis les justificatifs dans le délai des 6 semaines passent automatiquement en phase contradictoire et disposent à nouveau de 6 semaines pour se manifester.
  
  N’hésitez pas à les contacter afin de comprendre les éventuelles difficultés rencontrées pour transmettre les justificatifs.
  
  ---
  
  Les structures suivantes avaient transmis leurs justificatifs mais n’ont pas eu de retour de la DDETS, leur contrôle est considéré positif :
  
  - EI Prim’vert ID-2003
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_transition_to_adversarial_phase[no docs email body]
  '''
  Bonjour,
  
  Sauf erreur de notre part, vous n’avez pas transmis les justificatifs dans le cadre du contrôle a posteriori sur vos embauches réalisées en auto-prescription.
  
  La DDETS 1 ne peut donc pas faire de contrôle, par conséquent vous entrez dans une phase dite contradictoire de 6 semaines (durant laquelle il vous faut transmettre les justificatifs demandés) et qui se clôturera sur une décision (validation ou sanction pouvant aller jusqu’à un retrait d’aide au poste) conformément à l’instruction N° DGEFP/SDPAE/MIP/2022/83 du 5 avril 2022 relative à la mise en œuvre opérationnelle du contrôle a posteriori des recrutements en auto-prescription prévu par les articles R. 5132-1-12 à R. 5132-1-17 du code du travail.
  
  Pour transmettre les justificatifs, rendez-vous sur le tableau de bord de EI Les petits jardins ID-2002 à la rubrique “Contrôle a posteriori > Campagne en cours”.
  
  Accès direct à votre liste d’auto-prescriptions : http://localhost:8000/siae_evaluation/siae_job_applications_list/1002/
  
  En cas de besoin, vous pouvez consulter ce mode d’emploi : https://aide.emplois.inclusion.beta.gouv.fr/sections/15257969468817-Contrôle-a-posteriori-pour-les-SIAE/
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_transition_to_adversarial_phase[no response email body]
  '''
  Bonjour,
  
  Sauf erreur de notre part, vous n’avez pas transmis les justificatifs dans le cadre du contrôle a posteriori sur vos embauches réalisées en auto-prescription.
  
  La DDETS 1 ne peut donc pas faire de contrôle, par conséquent vous entrez dans une phase dite contradictoire de 6 semaines (durant laquelle il vous faut transmettre les justificatifs demandés) et qui se clôturera sur une décision (validation ou sanction pouvant aller jusqu’à un retrait d’aide au poste) conformément à l’instruction N° DGEFP/SDPAE/MIP/2022/83 du 5 avril 2022 relative à la mise en œuvre opérationnelle du contrôle a posteriori des recrutements en auto-prescription prévu par les articles R. 5132-1-12 à R. 5132-1-17 du code du travail.
  
  Pour transmettre les justificatifs, rendez-vous sur le tableau de bord de EI Les grands jardins ID-2001 à la rubrique “Contrôle a posteriori > Campagne en cours”.
  
  Accès direct à votre liste d’auto-prescriptions : http://localhost:8000/siae_evaluation/siae_job_applications_list/1001/
  
  En cas de besoin, vous pouvez consulter ce mode d’emploi : https://aide.emplois.inclusion.beta.gouv.fr/sections/15257969468817-Contrôle-a-posteriori-pour-les-SIAE/
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_transition_to_adversarial_phase[refused review email body]
  '''
  Bonjour,
  
  La DDETS 1 a vérifié tous les justificatifs que vous avez transmis dans le cadre du contrôle a posteriori sur vos embauches réalisées en auto-prescription entre le 02 Octobre 2022 et le 02 Décembre 2022.
  
  Suite à cette vérification, un ou plusieurs justificatifs sont attendus par la DDETS 1.
  
  Rendez-vous sur le tableau de bord de EI Geo refused ID-2005 à la rubrique “Campagne en cours”.
  
  Une ou plusieurs de vos auto-prescriptions nécessitent la transmission de nouveaux justificatifs.
  
  Dans la page de chaque auto-prescription, un commentaire concernant le refus du premier justificatif peut être présent afin de vous fournir plus de précisions.
  
  En cas de besoin, vous pouvez consulter ce mode d’emploi : https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/sections/15257969468817-Contrôle-a-posteriori-pour-les-SIAE
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_transition_to_adversarial_phase_accepted_but_not_reviewed[positive review email body]
  '''
  Bonjour,
  
  La DDETS 1 a validé la conformité des justificatifs que vous avez transmis dans le cadre du contrôle a posteriori sur les embauches réalisées en auto-prescription entre le 02 Octobre 2022 et le 02 Décembre 2022.
  
  Cette campagne de contrôle est terminée pour votre SIAE EI Prim’vert ID-1234.
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_transition_to_adversarial_phase_force_accepted[force accepted email body]
  '''
  Bonjour,
  
  La campagne de contrôle a posteriori sur les embauches réalisées en auto-prescription entre le 02 Octobre 2022 et le 02 Décembre 2022 entre en phase contradictoire.
  
  La DDETS 1 n’a pas étudié la conformité des justificatifs que vous avez transmis dans le délai imparti. Par conséquent, vos auto-prescriptions sont considérées comme conformes.
  
  Cette campagne de contrôle est terminée pour votre SIAE EI Prim’vert ID-2000.
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_transition_to_adversarial_phase_force_accepted[institution summary email body]
  '''
  Bonjour,
  
  Les structures suivantes avaient transmis leurs justificatifs mais n’ont pas eu de retour de la DDETS, leur contrôle est considéré positif :
  
  - EI Prim’vert ID-2000
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_transition_to_adversarial_phase_forced_to_adversarial_stage[institution summary email body]
  '''
  Bonjour,
  
  Vous trouverez ci-dessous la liste des SIAE qui n’ont transmis aucun justificatif dans le cadre du contrôle a posteriori :
  
  - EI Les grands jardins ID-2000
  
  Ces structures n’ayant pas transmis les justificatifs dans le délai des 6 semaines passent automatiquement en phase contradictoire et disposent à nouveau de 6 semaines pour se manifester.
  
  N’hésitez pas à les contacter afin de comprendre les éventuelles difficultés rencontrées pour transmettre les justificatifs.
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_transition_to_adversarial_phase_forced_to_adversarial_stage[no response email body]
  '''
  Bonjour,
  
  Sauf erreur de notre part, vous n’avez pas transmis les justificatifs dans le cadre du contrôle a posteriori sur vos embauches réalisées en auto-prescription.
  
  La DDETS 1 ne peut donc pas faire de contrôle, par conséquent vous entrez dans une phase dite contradictoire de 6 semaines (durant laquelle il vous faut transmettre les justificatifs demandés) et qui se clôturera sur une décision (validation ou sanction pouvant aller jusqu’à un retrait d’aide au poste) conformément à l’instruction N° DGEFP/SDPAE/MIP/2022/83 du 5 avril 2022 relative à la mise en œuvre opérationnelle du contrôle a posteriori des recrutements en auto-prescription prévu par les articles R. 5132-1-12 à R. 5132-1-17 du code du travail.
  
  Pour transmettre les justificatifs, rendez-vous sur le tableau de bord de EI Les grands jardins ID-2000 à la rubrique “Contrôle a posteriori > Campagne en cours”.
  
  Accès direct à votre liste d’auto-prescriptions : http://localhost:8000/siae_evaluation/siae_job_applications_list/1000/
  
  En cas de besoin, vous pouvez consulter ce mode d’emploi : https://aide.emplois.inclusion.beta.gouv.fr/sections/15257969468817-Contrôle-a-posteriori-pour-les-SIAE/
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
# name: TestEvaluationCampaignManager.test_transition_to_adversarial_phase_refused_but_not_reviewed[negative review email body]
  '''
  Bonjour,
  
  La DDETS 1 a vérifié tous les justificatifs que vous avez transmis dans le cadre du contrôle a posteriori sur vos embauches réalisées en auto-prescription entre le 02 Octobre 2022 et le 02 Décembre 2022.
  
  Suite à cette vérification, un ou plusieurs justificatifs sont attendus par la DDETS 1.
  
  Rendez-vous sur le tableau de bord de EI Prim’vert ID-1234 à la rubrique “Campagne en cours”.
  
  Une ou plusieurs de vos auto-prescriptions nécessitent la transmission de nouveaux justificatifs.
  
  Dans la page de chaque auto-prescription, un commentaire concernant le refus du premier justificatif peut être présent afin de vous fournir plus de précisions.
  
  En cas de besoin, vous pouvez consulter ce mode d’emploi : https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/sections/15257969468817-Contrôle-a-posteriori-pour-les-SIAE
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://localhost:8000
  '''
# ---
